Prevent random horizontal scroll bar from footer (i.e. #bottom).

--- a/style.css
+++ b/style.css
@@ -138,7 +138,8 @@ img {
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 	
-	overflow: scroll;
+	overflow-y: scroll;
+	overflow-x: none;
 }
 
 .post {
